// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkedPackagesReset getMergedMarkedPackages should merge all markedPackages if one file does not contain markedPackages 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "nodeA",
    },
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
  Object {
    "attributes": Object {
      "name": "nodeB",
    },
    "color": "#FFFFFF",
    "path": "/root/nodeB",
  },
]
`;

exports[`MarkedPackagesReset getMergedMarkedPackages should merge different markedPackages 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "nodeA",
    },
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
  Object {
    "attributes": Object {
      "name": "nodeB",
    },
    "color": "#FFFFFF",
    "path": "/root/nodeB",
  },
]
`;

exports[`MarkedPackagesReset getMergedMarkedPackages should merge markedPackage-attributes for the same markedPackage paths 1`] = `
Array [
  Object {
    "attributes": Object {
      "another": "nodeA",
      "name": "nodeA",
    },
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
]
`;

exports[`MarkedPackagesReset getMergedMarkedPackages should overwrite duplicated markedPackage-attributes for the same markedPackage 1`] = `
Array [
  Object {
    "attributes": Object {
      "name": "overwrite nodeA",
    },
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
]
`;